--- a/example/src/style.scss
+++ b/example/src/style.scss
@@ -36,3 +36,30 @@ button {
   color: #fff;
   border-radius: 4px;
 }
+.inner {
+  text-align: center;
+}
+.form {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  text-align: left;
+  margin-bottom: 15px;
+  & > div {
+    margin: 0 10px;
+  }
+  label {
+    font-size: 14px;
+    margin: 0 0 5px;
+    font-weight: 500;
+    display: block;
+  }
+  select, input {
+    width: 250px;
+    height: 40px;
+    border-radius: 4px;
+    border: solid 1px #000;
+    padding: 0 10px;
+    font-size: 14px;
+  }
+}
