--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,22 @@
 .toastr-container {
   position: fixed;
-  right: 0;
   width: 200px;
-  top: 0;
-  bottom: 0;
+  &.top-left {
+    top: 0;
+    left: 0;
+  }
+  &.top-right {
+    top: 0;
+    right: 0;
+  }
+  &.bottom-left {
+    bottom: 0;
+    left: 0;
+  }
+  &.bottom-right {
+    bottom: 0;
+    right: 0;
+  }
 }
 .toastr {
   background-color: #ff00a5;
