--- a/example/src/style.scss
+++ b/example/src/style.scss
@@ -29,12 +29,13 @@ button {
   background: #ffd7d7;
 }
 .toastr-btn {
-  font-size: 18px;
-  padding: 15px 35px;
+  font-size: 14px;
+  padding: 10px 20px;
   background-color: #9d00ff;
   border: 0;
   color: #fff;
   border-radius: 4px;
+  margin: 0 10px;
 }
 .inner {
   text-align: center;
@@ -55,11 +56,11 @@ button {
     display: block;
   }
   select, input {
-    width: 250px;
-    height: 40px;
+    width: 160px;
+    height: 35px;
     border-radius: 4px;
     border: solid 1px #000;
-    padding: 0 10px;
+    padding: 0 5px;
     font-size: 14px;
   }
 }
