--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 .toastr-container {
   position: fixed;
-  width: 200px;
+  width: 350px;
+  padding: 10px;
   &.top-left {
     top: 0;
     left: 0;
@@ -17,65 +18,89 @@
     bottom: 0;
     right: 0;
   }
+  &.top-center {
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+  }
+  &.bottom-center {
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+  }
 }
 .toastr {
-  background-color: #ff00a5;
-  width: 90%;
-  margin: 10px auto;
-  height: 50px;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-weight: 500;
-  &.info {
-    background-color: #0285B3;
+  // background-color: #ff00a5;
+  // width: 90%;
+  // margin: 0px auto 10px;
+  // height: 50px;
+  // border-radius: 4px;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // color: #fff;
+  // font-weight: 500;
+  // &.info {
+  //   background-color: #0285B3;
+  // }
+  // &.success {
+  //   background-color: #00A86B;
+  // }
+  // &.warning {
+  //   background-color: #F8B41B;
+  // }
+  // &.error {
+  //   background-color: #DE3122;
+  // }
+}
+
+
+
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    max-height: 0;
   }
-  &.success {
-    background-color: #00A86B;
-  }
-  &.warning {
-    background-color: #F8B41B;
-  }
-  &.error {
-    background-color: #DE3122;
+
+  to {
+    opacity: 1;
+    max-height: 100px;
   }
 }
+@keyframes fadeOutLeft {
+  from {
+    opacity: 1;
+    max-height: 100px;
+    margin-bottom: 10px;
+  }
+
+  to {
+    opacity: 0;
+    max-height: 0;
+    margin-bottom: 0px;
+  }
+}
+
 
 
 // Animation classes
 .fade-enter {
-  // opacity: 0;
-  // top: 20px;
-  max-height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: max-height .3s ease-in, opacity .3s ease-in;
+  animation-name: fadeInLeft;
+  animation-duration: 400ms;
 }
 .fade-enter-active {
-  // opacity: 1;
-  // top: 0;
-  // transition: all 500ms;
-  max-height: 500px;
-  opacity: 1;
-  overflow: hidden;
+  animation-name: fadeInLeft;
+  animation-duration: 400ms;
 }
 .fade-exit {
-  // opacity: 1;
-  // top: 0;
-  max-height: 500px;
-  opacity: 1;
-  transition: max-height .3s ease-out, opacity .3s ease-out, margin-bottom .3s ease-out;
-  overflow: hidden;
-  margin-bottom: 10px;
+  animation-name: fadeOutLeft;
+  animation-duration: 400ms;
 }
 .fade-exit-active {
-  // opacity: 0;
-  // top: -20px;
-  // transition: all 500ms;
-  max-height: 0;
-  opacity: 0;
-  overflow: hidden;
-  margin-bottom: 0px;
+  animation-name: fadeOutLeft;
+  animation-duration: 400ms;
+  animation-fill-mode: forwards;
 }
