--- a/src/style.scss
+++ b/src/style.scss
@@ -31,30 +31,30 @@
     margin: 0 auto;
   }
 }
-.toastr {
-  // background-color: #ff00a5;
-  // width: 90%;
-  // margin: 0px auto 10px;
-  // height: 50px;
-  // border-radius: 4px;
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
-  // color: #fff;
-  // font-weight: 500;
-  // &.info {
-  //   background-color: #0285B3;
-  // }
-  // &.success {
-  //   background-color: #00A86B;
-  // }
-  // &.warning {
-  //   background-color: #F8B41B;
-  // }
-  // &.error {
-  //   background-color: #DE3122;
-  // }
-}
+// .toastr {
+//   background-color: #ff00a5;
+//   width: 90%;
+//   margin: 0px auto 10px;
+//   height: 50px;
+//   border-radius: 4px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   color: #fff;
+//   font-weight: 500;
+//   &.info {
+//     background-color: #0285B3;
+//   }
+//   &.success {
+//     background-color: #00A86B;
+//   }
+//   &.warning {
+//     background-color: #F8B41B;
+//   }
+//   &.error {
+//     background-color: #DE3122;
+//   }
+// }
 
 
 
